<resources>
    <string name="app_name">Планировщик ремонта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lengthRoom">Длина комнаты</string>
    <string name="widthRoom">Ширина комнаты</string>
    <string name="heightRoom">Высота комнаты</string>
    <string name="wallpaper">Ширина обоев</string>
    <string name="laminat">Ламинат</string>
    <string name="linolium">Линолеум</string>
    <string name="sizeBoard">Размеры</string>
    <string name="countBoard">Кол-во в пачке</string>
    <string name="addMaterial">Добавить материал</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="utils_m">м</string>
    <string name="utils_sm">см</string>
    <string name="count_sht">шт</string>
    <string name="nameMaterial">Название материала</string>
    <string name="utilsMaterial">Еденицы измерения</string>
    <string name="countMaterial">Кол-во материала</string>
</resources>